# wifi-deauther

./: ARCHITECTURE.md  Cargo.toml  LICENSE  PROJECT_PLAN.md  PROJECT_SUMMARY.md  README.md  build.rs  diagram_enhanced.drawio
.cargo/: config.toml
scripts/: build-optimized.sh  test-cross-platform.sh
src/: lib.rs  main.rs
src/core/: buffer.rs  engine.rs  metrics.rs  mod.rs
src/gui/: app.rs  charts.rs  export.rs  mod.rs  targets.rs
src/network/: capture.rs  channel.rs  injection.rs  interface.rs  mod.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
ui/: app.slint
