[package]
name = "wifi-deauther"
version = "0.1.0"
edition = "2021"
authors = ["Wi-Fi Deauther Team"]
description = "High-performance Wi-Fi deauther with modern GUI"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# GUI framework
slint = "1.3"

# Networking
pcap = "1.1"
pnet = "0.34"
wifi-frames = "0.3"

# Performance
crossbeam = "0.8"
parking_lot = "0.12"
bytes = "1.5"

# Data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Charts
plotters = "0.3"

# Time
chrono = "0.4"

# MAC address handling
mac_address = "1.1"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["net", "socket"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "minwindef", "ntdef"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[build-dependencies]
slint-build = "1.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

# Musl target for static linking
[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"